<resources>
    <string name="app_name">Perpustakaan</string>
    <string name="prompt_email">Masukan email anda</string>
    <string name="prompt_password">Masukan password anda</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>

    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account"><font color='#000000'>I don\'t have account yet. </font></string>
    <string name="create"><font color='#0c0099'>create one</font></string>

</resources>